Finished documenting the commands folder contents. Every function in this plugin should now have documentation attached.
Vampire abilities can now be used when sessions are not active